test/compile_errors/err_collection_literal_mixed_forms.w
//! expect-error: element and map forms cannot be mixed in one literal

fn main:
    let values = [1, 2: 3]
